<resources>
    <string name="app_name">ProjectPlanner</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_firstname">First Name</string>
    <string name="prompt_lastname">Last Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_phone_number">Phone Number</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="create_project">Create Project</string>
    <string name="task_name">Task Name</string>
    <string name="create_task">Create Task</string>
    <string name="task_description">Description</string>
    <string-array name="task_status">
        <item>Not Started</item>
        <item>In Progress</item>
        <item>Pending</item>
        <item>Complete</item>
        <item>Canceled</item>
    </string-array>
</resources>